@@ -1,0 +1,2 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<aslo:Asynchronous xmlns:aslo="urn:oasis:names:tc:SAML:2.0:protocol:ext:async-slo"/>
